--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "import torch.nn as nn"
    ]
   },
   {
@@ -138,6 +139,121 @@
     "\n",
     "# dot product via computation\n",
     "print(torch.sum( tv1*tv2 ))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aa"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= np.random.randint(-5,15,20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([10, 13, 10,  8,  2, 13,  4,  7,  9,  7,  3, 14,  9,  2,  2,  9, -1,\n",
+       "        4,  9,  4])"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1.01538282e-02, 2.03945092e-01, 1.01538282e-02, 1.37417122e-03,\n",
+       "       3.40622990e-06, 2.03945092e-01, 2.51688238e-05, 5.05529340e-04,\n",
+       "       3.73538466e-03, 5.05529340e-04, 9.25909285e-06, 5.54380237e-01,\n",
+       "       3.73538466e-03, 3.40622990e-06, 3.40622990e-06, 3.73538466e-03,\n",
+       "       1.69586201e-07, 2.51688238e-05, 3.73538466e-03, 2.51688238e-05])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.exp(a)/sum(np.exp(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "softmax = nn.Softmax(dim=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a_t = torch.Tensor(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.0154e-02, 2.0395e-01, 1.0154e-02, 1.3742e-03, 3.4062e-06, 2.0395e-01,\n",
+       "        2.5169e-05, 5.0553e-04, 3.7354e-03, 5.0553e-04, 9.2591e-06, 5.5438e-01,\n",
+       "        3.7354e-03, 3.4062e-06, 3.4062e-06, 3.7354e-03, 1.6959e-07, 2.5169e-05,\n",
+       "        3.7354e-03, 2.5169e-05])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "softmax(a_t)"
    ]
   },
   {
