--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -254,6 +254,58 @@
    ],
    "source": [
     "softmax(a_t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 0,  1, 10],\n",
+      "        [-5,  8,  5]])\n",
+      " \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "torch.return_types.min(\n",
+       "values=tensor([-5,  1,  5]),\n",
+       "indices=tensor([1, 0, 1]))"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# repeat with matrix\n",
+    "M = torch.tensor([ [0,1,10], [-5,8,5] ])\n",
+    "print(M), print(' ')\n",
+    "\n",
+    "# various minima in this matrix!\n",
+    "min1 = torch.min(M)        # minimum from ENTIRE matrix\n",
+    "min2 = torch.min(M,axis=0) # minimum of each column (across rows)\n",
+    "min3 = torch.min(M,axis=1) # minimum of each row (across columns)\n",
+    "\n",
+    "# # print them out\n",
+    "# print(min1), print(' ')\n",
+    "# print(min2), print(' ')\n",
+    "# print(min2.values)\n",
+    "# print(min2.indices)\n",
+    "min2"
    ]
   },
   {
