--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,12 +280,10 @@
     {
      "data": {
       "text/plain": [
-       "torch.return_types.min(\n",
-       "values=tensor([-5,  1,  5]),\n",
-       "indices=tensor([1, 0, 1]))"
+       "tensor(-5)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,7 +303,124 @@
     "# print(min2), print(' ')\n",
     "# print(min2.values)\n",
     "# print(min2.indices)\n",
-    "min2"
+    "min1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3.142857142857143\n",
+      "3.142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a list of numbers to compute the mean and variance of\n",
+    "x = [1,2,4,6,5,4,0]\n",
+    "n = len(x)\n",
+    "\n",
+    "# compute the mean\n",
+    "mean1 = np.mean(x)\n",
+    "mean2 = np.sum(x) / n\n",
+    "\n",
+    "# print them\n",
+    "print(mean1)\n",
+    "print(mean2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean = np.sum(x)/len(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3.142857142857143"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.float64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(mean)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.122448979591836"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.sum((x-mean)**2))/7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.122448979591836"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.var(x)"
    ]
   },
   {
