--- a/deep understanding of DL.ipynb
+++ b/deep understanding of DL.ipynb
@@ -46376,6 +46376,540 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import libraries\n",
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import numpy as np\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from IPython import display\n",
+    "display.set_matplotlib_formats('svg')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import seaborn as sns\n",
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iris = sns.load_dataset('iris')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['sepal_length', 'sepal_width', 'petal_length', 'petal_width'], dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris.columns[:-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>sepal_length</th>\n",
+       "      <th>sepal_width</th>\n",
+       "      <th>petal_length</th>\n",
+       "      <th>petal_width</th>\n",
+       "      <th>species</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4.7</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>1.3</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.6</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>1.5</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>setosa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>146</th>\n",
+       "      <td>6.3</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.9</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>147</th>\n",
+       "      <td>6.5</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.2</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>148</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>149</th>\n",
+       "      <td>5.9</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>virginica</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>150 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     sepal_length  sepal_width  petal_length  petal_width    species\n",
+       "0             5.1          3.5           1.4          0.2     setosa\n",
+       "1             4.9          3.0           1.4          0.2     setosa\n",
+       "2             4.7          3.2           1.3          0.2     setosa\n",
+       "3             4.6          3.1           1.5          0.2     setosa\n",
+       "4             5.0          3.6           1.4          0.2     setosa\n",
+       "..            ...          ...           ...          ...        ...\n",
+       "145           6.7          3.0           5.2          2.3  virginica\n",
+       "146           6.3          2.5           5.0          1.9  virginica\n",
+       "147           6.5          3.0           5.2          2.0  virginica\n",
+       "148           6.2          3.4           5.4          2.3  virginica\n",
+       "149           5.9          3.0           5.1          1.8  virginica\n",
+       "\n",
+       "[150 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iris"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = torch.Tensor(iris.loc[:,iris.columns[:-1]].to_numpy())\n",
+    "labels = iris['species']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[5.1000, 3.5000, 1.4000, 0.2000],\n",
+       "        [4.9000, 3.0000, 1.4000, 0.2000],\n",
+       "        [4.7000, 3.2000, 1.3000, 0.2000],\n",
+       "        [4.6000, 3.1000, 1.5000, 0.2000],\n",
+       "        [5.0000, 3.6000, 1.4000, 0.2000],\n",
+       "        [5.4000, 3.9000, 1.7000, 0.4000],\n",
+       "        [4.6000, 3.4000, 1.4000, 0.3000],\n",
+       "        [5.0000, 3.4000, 1.5000, 0.2000],\n",
+       "        [4.4000, 2.9000, 1.4000, 0.2000],\n",
+       "        [4.9000, 3.1000, 1.5000, 0.1000],\n",
+       "        [5.4000, 3.7000, 1.5000, 0.2000],\n",
+       "        [4.8000, 3.4000, 1.6000, 0.2000],\n",
+       "        [4.8000, 3.0000, 1.4000, 0.1000],\n",
+       "        [4.3000, 3.0000, 1.1000, 0.1000],\n",
+       "        [5.8000, 4.0000, 1.2000, 0.2000],\n",
+       "        [5.7000, 4.4000, 1.5000, 0.4000],\n",
+       "        [5.4000, 3.9000, 1.3000, 0.4000],\n",
+       "        [5.1000, 3.5000, 1.4000, 0.3000],\n",
+       "        [5.7000, 3.8000, 1.7000, 0.3000],\n",
+       "        [5.1000, 3.8000, 1.5000, 0.3000],\n",
+       "        [5.4000, 3.4000, 1.7000, 0.2000],\n",
+       "        [5.1000, 3.7000, 1.5000, 0.4000],\n",
+       "        [4.6000, 3.6000, 1.0000, 0.2000],\n",
+       "        [5.1000, 3.3000, 1.7000, 0.5000],\n",
+       "        [4.8000, 3.4000, 1.9000, 0.2000],\n",
+       "        [5.0000, 3.0000, 1.6000, 0.2000],\n",
+       "        [5.0000, 3.4000, 1.6000, 0.4000],\n",
+       "        [5.2000, 3.5000, 1.5000, 0.2000],\n",
+       "        [5.2000, 3.4000, 1.4000, 0.2000],\n",
+       "        [4.7000, 3.2000, 1.6000, 0.2000],\n",
+       "        [4.8000, 3.1000, 1.6000, 0.2000],\n",
+       "        [5.4000, 3.4000, 1.5000, 0.4000],\n",
+       "        [5.2000, 4.1000, 1.5000, 0.1000],\n",
+       "        [5.5000, 4.2000, 1.4000, 0.2000],\n",
+       "        [4.9000, 3.1000, 1.5000, 0.2000],\n",
+       "        [5.0000, 3.2000, 1.2000, 0.2000],\n",
+       "        [5.5000, 3.5000, 1.3000, 0.2000],\n",
+       "        [4.9000, 3.6000, 1.4000, 0.1000],\n",
+       "        [4.4000, 3.0000, 1.3000, 0.2000],\n",
+       "        [5.1000, 3.4000, 1.5000, 0.2000],\n",
+       "        [5.0000, 3.5000, 1.3000, 0.3000],\n",
+       "        [4.5000, 2.3000, 1.3000, 0.3000],\n",
+       "        [4.4000, 3.2000, 1.3000, 0.2000],\n",
+       "        [5.0000, 3.5000, 1.6000, 0.6000],\n",
+       "        [5.1000, 3.8000, 1.9000, 0.4000],\n",
+       "        [4.8000, 3.0000, 1.4000, 0.3000],\n",
+       "        [5.1000, 3.8000, 1.6000, 0.2000],\n",
+       "        [4.6000, 3.2000, 1.4000, 0.2000],\n",
+       "        [5.3000, 3.7000, 1.5000, 0.2000],\n",
+       "        [5.0000, 3.3000, 1.4000, 0.2000],\n",
+       "        [7.0000, 3.2000, 4.7000, 1.4000],\n",
+       "        [6.4000, 3.2000, 4.5000, 1.5000],\n",
+       "        [6.9000, 3.1000, 4.9000, 1.5000],\n",
+       "        [5.5000, 2.3000, 4.0000, 1.3000],\n",
+       "        [6.5000, 2.8000, 4.6000, 1.5000],\n",
+       "        [5.7000, 2.8000, 4.5000, 1.3000],\n",
+       "        [6.3000, 3.3000, 4.7000, 1.6000],\n",
+       "        [4.9000, 2.4000, 3.3000, 1.0000],\n",
+       "        [6.6000, 2.9000, 4.6000, 1.3000],\n",
+       "        [5.2000, 2.7000, 3.9000, 1.4000],\n",
+       "        [5.0000, 2.0000, 3.5000, 1.0000],\n",
+       "        [5.9000, 3.0000, 4.2000, 1.5000],\n",
+       "        [6.0000, 2.2000, 4.0000, 1.0000],\n",
+       "        [6.1000, 2.9000, 4.7000, 1.4000],\n",
+       "        [5.6000, 2.9000, 3.6000, 1.3000],\n",
+       "        [6.7000, 3.1000, 4.4000, 1.4000],\n",
+       "        [5.6000, 3.0000, 4.5000, 1.5000],\n",
+       "        [5.8000, 2.7000, 4.1000, 1.0000],\n",
+       "        [6.2000, 2.2000, 4.5000, 1.5000],\n",
+       "        [5.6000, 2.5000, 3.9000, 1.1000],\n",
+       "        [5.9000, 3.2000, 4.8000, 1.8000],\n",
+       "        [6.1000, 2.8000, 4.0000, 1.3000],\n",
+       "        [6.3000, 2.5000, 4.9000, 1.5000],\n",
+       "        [6.1000, 2.8000, 4.7000, 1.2000],\n",
+       "        [6.4000, 2.9000, 4.3000, 1.3000],\n",
+       "        [6.6000, 3.0000, 4.4000, 1.4000],\n",
+       "        [6.8000, 2.8000, 4.8000, 1.4000],\n",
+       "        [6.7000, 3.0000, 5.0000, 1.7000],\n",
+       "        [6.0000, 2.9000, 4.5000, 1.5000],\n",
+       "        [5.7000, 2.6000, 3.5000, 1.0000],\n",
+       "        [5.5000, 2.4000, 3.8000, 1.1000],\n",
+       "        [5.5000, 2.4000, 3.7000, 1.0000],\n",
+       "        [5.8000, 2.7000, 3.9000, 1.2000],\n",
+       "        [6.0000, 2.7000, 5.1000, 1.6000],\n",
+       "        [5.4000, 3.0000, 4.5000, 1.5000],\n",
+       "        [6.0000, 3.4000, 4.5000, 1.6000],\n",
+       "        [6.7000, 3.1000, 4.7000, 1.5000],\n",
+       "        [6.3000, 2.3000, 4.4000, 1.3000],\n",
+       "        [5.6000, 3.0000, 4.1000, 1.3000],\n",
+       "        [5.5000, 2.5000, 4.0000, 1.3000],\n",
+       "        [5.5000, 2.6000, 4.4000, 1.2000],\n",
+       "        [6.1000, 3.0000, 4.6000, 1.4000],\n",
+       "        [5.8000, 2.6000, 4.0000, 1.2000],\n",
+       "        [5.0000, 2.3000, 3.3000, 1.0000],\n",
+       "        [5.6000, 2.7000, 4.2000, 1.3000],\n",
+       "        [5.7000, 3.0000, 4.2000, 1.2000],\n",
+       "        [5.7000, 2.9000, 4.2000, 1.3000],\n",
+       "        [6.2000, 2.9000, 4.3000, 1.3000],\n",
+       "        [5.1000, 2.5000, 3.0000, 1.1000],\n",
+       "        [5.7000, 2.8000, 4.1000, 1.3000],\n",
+       "        [6.3000, 3.3000, 6.0000, 2.5000],\n",
+       "        [5.8000, 2.7000, 5.1000, 1.9000],\n",
+       "        [7.1000, 3.0000, 5.9000, 2.1000],\n",
+       "        [6.3000, 2.9000, 5.6000, 1.8000],\n",
+       "        [6.5000, 3.0000, 5.8000, 2.2000],\n",
+       "        [7.6000, 3.0000, 6.6000, 2.1000],\n",
+       "        [4.9000, 2.5000, 4.5000, 1.7000],\n",
+       "        [7.3000, 2.9000, 6.3000, 1.8000],\n",
+       "        [6.7000, 2.5000, 5.8000, 1.8000],\n",
+       "        [7.2000, 3.6000, 6.1000, 2.5000],\n",
+       "        [6.5000, 3.2000, 5.1000, 2.0000],\n",
+       "        [6.4000, 2.7000, 5.3000, 1.9000],\n",
+       "        [6.8000, 3.0000, 5.5000, 2.1000],\n",
+       "        [5.7000, 2.5000, 5.0000, 2.0000],\n",
+       "        [5.8000, 2.8000, 5.1000, 2.4000],\n",
+       "        [6.4000, 3.2000, 5.3000, 2.3000],\n",
+       "        [6.5000, 3.0000, 5.5000, 1.8000],\n",
+       "        [7.7000, 3.8000, 6.7000, 2.2000],\n",
+       "        [7.7000, 2.6000, 6.9000, 2.3000],\n",
+       "        [6.0000, 2.2000, 5.0000, 1.5000],\n",
+       "        [6.9000, 3.2000, 5.7000, 2.3000],\n",
+       "        [5.6000, 2.8000, 4.9000, 2.0000],\n",
+       "        [7.7000, 2.8000, 6.7000, 2.0000],\n",
+       "        [6.3000, 2.7000, 4.9000, 1.8000],\n",
+       "        [6.7000, 3.3000, 5.7000, 2.1000],\n",
+       "        [7.2000, 3.2000, 6.0000, 1.8000],\n",
+       "        [6.2000, 2.8000, 4.8000, 1.8000],\n",
+       "        [6.1000, 3.0000, 4.9000, 1.8000],\n",
+       "        [6.4000, 2.8000, 5.6000, 2.1000],\n",
+       "        [7.2000, 3.0000, 5.8000, 1.6000],\n",
+       "        [7.4000, 2.8000, 6.1000, 1.9000],\n",
+       "        [7.9000, 3.8000, 6.4000, 2.0000],\n",
+       "        [6.4000, 2.8000, 5.6000, 2.2000],\n",
+       "        [6.3000, 2.8000, 5.1000, 1.5000],\n",
+       "        [6.1000, 2.6000, 5.6000, 1.4000],\n",
+       "        [7.7000, 3.0000, 6.1000, 2.3000],\n",
+       "        [6.3000, 3.4000, 5.6000, 2.4000],\n",
+       "        [6.4000, 3.1000, 5.5000, 1.8000],\n",
+       "        [6.0000, 3.0000, 4.8000, 1.8000],\n",
+       "        [6.9000, 3.1000, 5.4000, 2.1000],\n",
+       "        [6.7000, 3.1000, 5.6000, 2.4000],\n",
+       "        [6.9000, 3.1000, 5.1000, 2.3000],\n",
+       "        [5.8000, 2.7000, 5.1000, 1.9000],\n",
+       "        [6.8000, 3.2000, 5.9000, 2.3000],\n",
+       "        [6.7000, 3.3000, 5.7000, 2.5000],\n",
+       "        [6.7000, 3.0000, 5.2000, 2.3000],\n",
+       "        [6.3000, 2.5000, 5.0000, 1.9000],\n",
+       "        [6.5000, 3.0000, 5.2000, 2.0000],\n",
+       "        [6.2000, 3.4000, 5.4000, 2.3000],\n",
+       "        [5.9000, 3.0000, 5.1000, 1.8000]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = labels.map({'setosa': 0, 'versicolor': 1, 'virginica': 2})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = torch.Tensor(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.,\n",
+       "        0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 1.,\n",
+       "        1., 1., 1., 1., 1., 1., 1., 1., 1., 1., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
+       "        2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
+       "        2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2., 2.,\n",
+       "        2., 2., 2., 2., 2., 2.])"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, test_data, train_labels, test_labels = train_test_split(data, labels, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data = TensorDataset(train_data,train_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_data = TensorDataset(test_data,test_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[(tensor([6.5000, 3.2000, 5.1000, 2.0000]), tensor(2.)),\n",
+       " (tensor([5.8000, 2.8000, 5.1000, 2.4000]), tensor(2.)),\n",
+       " (tensor([7.0000, 3.2000, 4.7000, 1.4000]), tensor(1.)),\n",
+       " (tensor([6.9000, 3.1000, 5.4000, 2.1000]), tensor(2.)),\n",
+       " (tensor([6.3000, 3.4000, 5.6000, 2.4000]), tensor(2.)),\n",
+       " (tensor([5.7000, 3.8000, 1.7000, 0.3000]), tensor(0.)),\n",
+       " (tensor([6.7000, 3.1000, 4.4000, 1.4000]), tensor(1.)),\n",
+       " (tensor([7.7000, 2.8000, 6.7000, 2.0000]), tensor(2.)),\n",
+       " (tensor([5.1000, 3.8000, 1.6000, 0.2000]), tensor(0.)),\n",
+       " (tensor([5.6000, 3.0000, 4.5000, 1.5000]), tensor(1.)),\n",
+       " (tensor([5.5000, 2.5000, 4.0000, 1.3000]), tensor(1.)),\n",
+       " (tensor([5.5000, 2.6000, 4.4000, 1.2000]), tensor(1.)),\n",
+       " (tensor([6.3000, 2.9000, 5.6000, 1.8000]), tensor(2.)),\n",
+       " (tensor([5.9000, 3.0000, 5.1000, 1.8000]), tensor(2.)),\n",
+       " (tensor([6.3000, 2.3000, 4.4000, 1.3000]), tensor(1.)),\n",
+       " (tensor([6.0000, 2.2000, 4.0000, 1.0000]), tensor(1.)),\n",
+       " (tensor([6.4000, 3.2000, 5.3000, 2.3000]), tensor(2.)),\n",
+       " (tensor([5.8000, 2.7000, 5.1000, 1.9000]), tensor(2.)),\n",
+       " (tensor([6.9000, 3.1000, 4.9000, 1.5000]), tensor(1.)),\n",
+       " (tensor([5.1000, 3.5000, 1.4000, 0.3000]), tensor(0.)),\n",
+       " (tensor([6.7000, 3.1000, 5.6000, 2.4000]), tensor(2.)),\n",
+       " (tensor([4.9000, 2.5000, 4.5000, 1.7000]), tensor(2.)),\n",
+       " (tensor([6.4000, 2.7000, 5.3000, 1.9000]), tensor(2.)),\n",
+       " (tensor([6.5000, 2.8000, 4.6000, 1.5000]), tensor(1.)),\n",
+       " (tensor([4.9000, 3.6000, 1.4000, 0.1000]), tensor(0.)),\n",
+       " (tensor([6.8000, 2.8000, 4.8000, 1.4000]), tensor(1.)),\n",
+       " (tensor([5.6000, 2.8000, 4.9000, 2.0000]), tensor(2.)),\n",
+       " (tensor([6.8000, 3.0000, 5.5000, 2.1000]), tensor(2.)),\n",
+       " (tensor([5.0000, 3.5000, 1.6000, 0.6000]), tensor(0.)),\n",
+       " (tensor([6.0000, 2.9000, 4.5000, 1.5000]), tensor(1.))]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DataLoader(train_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
