--- a/deep understanding of DL.ipynb
+++ b/deep understanding of DL.ipynb
@@ -46887,11 +46887,201 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([6.5000, 3.2000, 5.1000, 2.0000]), tensor(2.))"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([30, 4])"
+      ]
+     },
+     "execution_count": 103,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_data.tensors[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
-    "DataLoader(train_data)"
+    "test_loader = DataLoader(test_data, batch_size=len(test_data))\n",
+    "train_loader = DataLoader(train_data, batch_size = 12)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[6.5000, 3.2000, 5.1000, 2.0000],\n",
+       "         [5.8000, 2.8000, 5.1000, 2.4000],\n",
+       "         [7.0000, 3.2000, 4.7000, 1.4000],\n",
+       "         [6.9000, 3.1000, 5.4000, 2.1000],\n",
+       "         [6.3000, 3.4000, 5.6000, 2.4000],\n",
+       "         [5.7000, 3.8000, 1.7000, 0.3000],\n",
+       "         [6.7000, 3.1000, 4.4000, 1.4000],\n",
+       "         [7.7000, 2.8000, 6.7000, 2.0000],\n",
+       "         [5.1000, 3.8000, 1.6000, 0.2000],\n",
+       "         [5.6000, 3.0000, 4.5000, 1.5000],\n",
+       "         [5.5000, 2.5000, 4.0000, 1.3000],\n",
+       "         [5.5000, 2.6000, 4.4000, 1.2000],\n",
+       "         [6.3000, 2.9000, 5.6000, 1.8000],\n",
+       "         [5.9000, 3.0000, 5.1000, 1.8000],\n",
+       "         [6.3000, 2.3000, 4.4000, 1.3000],\n",
+       "         [6.0000, 2.2000, 4.0000, 1.0000],\n",
+       "         [6.4000, 3.2000, 5.3000, 2.3000],\n",
+       "         [5.8000, 2.7000, 5.1000, 1.9000],\n",
+       "         [6.9000, 3.1000, 4.9000, 1.5000],\n",
+       "         [5.1000, 3.5000, 1.4000, 0.3000],\n",
+       "         [6.7000, 3.1000, 5.6000, 2.4000],\n",
+       "         [4.9000, 2.5000, 4.5000, 1.7000],\n",
+       "         [6.4000, 2.7000, 5.3000, 1.9000],\n",
+       "         [6.5000, 2.8000, 4.6000, 1.5000],\n",
+       "         [4.9000, 3.6000, 1.4000, 0.1000],\n",
+       "         [6.8000, 2.8000, 4.8000, 1.4000],\n",
+       "         [5.6000, 2.8000, 4.9000, 2.0000],\n",
+       "         [6.8000, 3.0000, 5.5000, 2.1000],\n",
+       "         [5.0000, 3.5000, 1.6000, 0.6000],\n",
+       "         [6.0000, 2.9000, 4.5000, 1.5000]]),\n",
+       " tensor([2., 2., 1., 2., 2., 0., 1., 2., 0., 1., 1., 1., 2., 2., 1., 1., 2., 2.,\n",
+       "         1., 0., 2., 2., 2., 1., 0., 1., 2., 2., 0., 1.])]"
+      ]
+     },
+     "execution_count": 116,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(test_loader)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n",
+      "torch.Size([12, 4]) torch.Size([12])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([[5.0000, 3.4000, 1.5000, 0.2000],\n",
+       "         [4.8000, 3.4000, 1.6000, 0.2000],\n",
+       "         [6.4000, 2.9000, 4.3000, 1.3000],\n",
+       "         [4.3000, 3.0000, 1.1000, 0.1000],\n",
+       "         [5.0000, 3.4000, 1.6000, 0.4000],\n",
+       "         [6.3000, 2.5000, 5.0000, 1.9000],\n",
+       "         [6.5000, 3.0000, 5.2000, 2.0000],\n",
+       "         [5.5000, 3.5000, 1.3000, 0.2000],\n",
+       "         [5.3000, 3.7000, 1.5000, 0.2000],\n",
+       "         [4.4000, 3.0000, 1.3000, 0.2000],\n",
+       "         [6.0000, 2.2000, 5.0000, 1.5000],\n",
+       "         [5.2000, 2.7000, 3.9000, 1.4000]]),\n",
+       " tensor([0., 0., 1., 0., 0., 2., 2., 0., 0., 0., 2., 1.]))"
+      ]
+     },
+     "execution_count": 118,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check sizes of data batches\n",
+    "for X,y in train_loader:\n",
+    "  print(X.shape,y.shape)\n",
+    "\n",
+    "X,y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def createANewModel():\n",
+    "\n",
+    "    # model architecture\n",
+    "    ANNiris = nn.Sequential(\n",
+    "      nn.Linear(4,64),   # input layer\n",
+    "      nn.ReLU(),         # activation unit\n",
+    "      nn.Linear(64,64),  # hidden layer\n",
+    "      nn.ReLU(),         # activation unit\n",
+    "      nn.Linear(64,3),   # output units\n",
+    "        )\n",
+    "\n",
+    "    # loss function\n",
+    "    lossfun = nn.CrossEntropyLoss()\n",
+    "\n",
+    "    # optimizer\n",
+    "    optimizer = torch.optim.SGD(ANNiris.parameters(),lr=.05)\n",
+    "\n",
+    "    return ANNiris,lossfun,optimizer"
    ]
   },
   {
@@ -46899,21 +47089,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# train the model\n",
+    "\n",
+    "# global parameter\n",
+    "numepochs = 500\n",
+    "\n",
+    "def trainTheModel():\n",
+    "\n",
+    "    # initialize accuracies as empties (not storing losses here)\n",
+    "    trainAcc = []\n",
+    "    testAcc  = []\n",
+    "\n",
+    "    # loop over epochs\n",
+    "    for epochi in range(numepochs):\n",
+    "\n",
+    "\n",
+    "    # loop over training data batches\n",
+    "    batchAcc = []\n",
+    "    for X,y in train_loader:\n",
+    "\n",
+    "        # forward pass and loss\n",
+    "        yHat = ANNiris(X)\n",
+    "        loss = lossfun(yHat,y)\n",
+    "\n",
+    "        # backprop\n",
+    "        optimizer.zero_grad()\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "\n",
+    "        # compute training accuracy just for this batch\n",
+    "        batchAcc.append( 100*torch.mean((torch.argmax(yHat,axis=1) == y).float()).item() )\n",
+    "        # end of batch loop...\n",
+    "\n",
+    "\n",
+    "    # now that we've trained through the batches, get their average training accuracy\n",
+    "    trainAcc.append( np.mean(batchAcc) )\n",
+    "\n",
+    "    # test accuracy\n",
+    "    X,y = next(iter(test_loader)) # extract X,y from test dataloader\n",
+    "    predlabels = torch.argmax( ANNiris(X),axis=1 )\n",
+    "    testAcc.append( 100*torch.mean((predlabels == y).float()).item() )\n",
+    "\n",
+    "    # function output\n",
+    "    return trainAcc,testAcc\n"
+   ]
   }
  ],
  "metadata": {
