--- a/deep understanding of DL.ipynb
+++ b/deep understanding of DL.ipynb
@@ -5270,13 +5270,21 @@
     "winenet, lossfun, optimizer = CreatModel()\n",
     "train_loader = [train_loader45,train_loader55,train_loader65]\n",
     "test_loader = [test_loader45,test_loader55,test_loader65]\n",
+    "labels = [labels45,labels55,labels65]\n",
+    "thresh = ['4.5','5.5','6.5']\n",
     "\n",
     "for i in range(3):\n",
     "    trainAcc,testAcc,losses = TrainModel(train_loader[i],test_loader[i])\n",
+    "\n",
     "    ax[i,0].plot(losses)\n",
+    "    ax[i,0].set_title(f'Loss with threshold = {thresh[i]}')\n",
+    "\n",
     "    ax[i,1].plot(trainAcc)\n",
     "    ax[i,1].plot(testAcc)\n",
-    "#     ax[i,2].plot"
+    "    ax[i,1].set_title(f'Accuracy with threshold = {thresh[i]}')\n",
+    "\n",
+    "    ax[i,2].bar(x = ['bad','good'], height = labels[i].unique(return_counts=True)[1])\n",
+    "    ax[i,2].set_title(f'Count with threshold = {thresh[i]}')"
    ]
   },
   {
