--- a/My_code,_minibatchsize_in_wine_set.ipynb
+++ b/My_code,_minibatchsize_in_wine_set.ipynb
@@ -6,7 +6,7 @@
       "name": "My code, minibatchsize in wine set.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOcTrSPStyGYAukfUrcPcrd",
+      "authorship_tag": "ABX9TyNKdhSMQ819Ad1FSzhsSfwM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -810,26 +810,52 @@
     {
       "cell_type": "code",
       "source": [
-        "labelsT"
+        "dataT.shape"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kpWKJ_Sl2-Kd",
+        "outputId": "ae627419-4f5e-4c14-ead5-6a78404e57c7"
+      },
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "torch.Size([1599, 11])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 47
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "labelsT.unique()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-RYYRmJcuyjH",
-        "outputId": "62cc1fc1-d3a4-469d-b676-af12fde42b4c"
+        "outputId": "2f14d2a4-4dc5-4e84-887e-5c96d0fc9fc2"
       },
-      "execution_count": 28,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([5, 5, 5,  ..., 6, 5, 6])"
+              "tensor([3, 4, 5, 6, 7, 8])"
             ]
           },
           "metadata": {},
-          "execution_count": 28
+          "execution_count": 48
         }
       ]
     },
@@ -922,7 +948,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        ""
+        "# create model "
       ],
       "metadata": {
         "id": "tDKtCX6VzSet"
@@ -931,13 +957,70 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "class ANNnet(nn.Module):\n",
+        "\n",
+        "  def __init__(self):\n",
+        "    super().__init__()\n",
+        "\n",
+        "    self.input = nn.Linear(11,128)\n",
+        "    self.fc1 = nn.Linear(128,256)\n",
+        "    self.fc2 = nn.Linear(256,256)\n",
+        "    self.output = nn.Linear(256,6)\n",
+        "\n",
+        "\n",
+        "  def forward(self,x):\n",
+        "\n",
+        "    x = F.relu(self.input(x))\n",
+        "    x = F.relu(self.fc1(x))\n",
+        "    x = F.relu(self.fc2(x))\n",
+        "    x = F.leaky_relu(self.output(x))\n",
+        "\n",
+        "    return x\n",
+        "\n",
+        "net = ANNnet()\n",
+        "optimizer = torch.optim.SGD(params = net.parameters(), lr = 0.01, momentum=.9)\n",
+        "lossfun = nn.CrossEntropyLoss()"
       ],
       "metadata": {
-        "id": "S-yan_zBvKUb"
+        "id": "x-G99le1zd8b"
       },
-      "execution_count": null,
+      "execution_count": 50,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## sanity check the model"
+      ],
+      "metadata": {
+        "id": "TstJaiLk5YI7"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "net = ANNnet()\n",
+        "x = torch.randn((10,11))\n",
+        "y = net(x)\n",
+        "print(y.shape)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S-yan_zBvKUb",
+        "outputId": "46e38f7f-fc5a-410b-d7d0-e3e09a1ba775"
+      },
+      "execution_count": 52,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([10, 6])\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
