train the model

--- a/My_code,_minibatchsize_in_wine_set.ipynb
+++ b/My_code,_minibatchsize_in_wine_set.ipynb
@@ -6,7 +6,7 @@
       "name": "My code, minibatchsize in wine set.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNKdhSMQ819Ad1FSzhsSfwM",
+      "authorship_tag": "ABX9TyMUaT58E22MNVA/YvZ9+GUa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 159,
       "metadata": {
         "id": "T9sYSYN7mGAr"
       },
@@ -55,7 +55,9 @@
         "import scipy.stats as st\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "from IPython import display\n",
+        "display.set_matplotlib_formats('svg')"
       ]
     },
     {
@@ -75,7 +77,7 @@
       "metadata": {
         "id": "HH0FMmGrm2T2"
       },
-      "execution_count": 15,
+      "execution_count": 160,
       "outputs": []
     },
     {
@@ -90,16 +92,16 @@
           "height": 502
         },
         "id": "56JnmPQCm751",
-        "outputId": "0075bfb9-3ee0-4fa3-804d-ab4aa3ae9f27"
+        "outputId": "ffc34ff3-d21c-4d05-8828-3005bbfb44ce"
       },
-      "execution_count": 16,
+      "execution_count": 161,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-34d43a79-bc67-4331-869b-63c3eaa8ec96\">\n",
+              "  <div id=\"df-27cdf684-04ab-4a91-8d81-95237cefa233\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -303,7 +305,7 @@
               "</table>\n",
               "<p>1599 rows × 12 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-34d43a79-bc67-4331-869b-63c3eaa8ec96')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-27cdf684-04ab-4a91-8d81-95237cefa233')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -354,12 +356,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-34d43a79-bc67-4331-869b-63c3eaa8ec96 button.colab-df-convert');\n",
+              "          document.querySelector('#df-27cdf684-04ab-4a91-8d81-95237cefa233 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-34d43a79-bc67-4331-869b-63c3eaa8ec96');\n",
+              "          const element = document.querySelector('#df-27cdf684-04ab-4a91-8d81-95237cefa233');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -398,7 +400,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 161
         }
       ]
     },
@@ -414,16 +416,16 @@
           "height": 502
         },
         "id": "gtDALIn4sO-m",
-        "outputId": "418c6387-f03c-44d1-9f37-8f358f144ec1"
+        "outputId": "0f0bece0-258b-4687-9904-d95c007daf15"
       },
-      "execution_count": 19,
+      "execution_count": 162,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-166c3899-9aaa-4471-b45e-4f695cbf36f2\">\n",
+              "  <div id=\"df-269743b1-d64f-4dc0-9fe2-4c2241092a7e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -615,7 +617,7 @@
               "</table>\n",
               "<p>1599 rows × 11 columns</p>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-166c3899-9aaa-4471-b45e-4f695cbf36f2')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-269743b1-d64f-4dc0-9fe2-4c2241092a7e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -666,12 +668,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-166c3899-9aaa-4471-b45e-4f695cbf36f2 button.colab-df-convert');\n",
+              "          document.querySelector('#df-269743b1-d64f-4dc0-9fe2-4c2241092a7e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-166c3899-9aaa-4471-b45e-4f695cbf36f2');\n",
+              "          const element = document.querySelector('#df-269743b1-d64f-4dc0-9fe2-4c2241092a7e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -710,7 +712,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 19
+          "execution_count": 162
         }
       ]
     },
@@ -725,9 +727,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "UPNEknd0tdwZ",
-        "outputId": "691cc711-2be1-4283-e887-f6a6806a4828"
+        "outputId": "a1ce9cac-10b5-41dd-ed72-971bb678a7b6"
       },
-      "execution_count": 23,
+      "execution_count": 163,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -748,7 +750,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 23
+          "execution_count": 163
         }
       ]
     },
@@ -760,19 +762,19 @@
       "metadata": {
         "id": "7ubAZZFinUZv"
       },
-      "execution_count": 25,
+      "execution_count": 164,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "dataT = torch.FloatTensor(data_norm)\n",
-        "labelsT = torch.tensor(labels).long()"
+        "labelsT = torch.tensor(labels).long()-3"
       ],
       "metadata": {
         "id": "qKGF2vk6tKRl"
       },
-      "execution_count": 26,
+      "execution_count": 165,
       "outputs": []
     },
     {
@@ -785,9 +787,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Oc45HxdwuAdA",
-        "outputId": "2f0ac89f-8f40-4832-f2ba-a5eda9643a58"
+        "outputId": "d2aa87aa-51ed-4289-e462-6ebbd2ddf2cc"
       },
-      "execution_count": 27,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +805,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 27
+          "execution_count": 166
         }
       ]
     },
@@ -817,9 +819,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kpWKJ_Sl2-Kd",
-        "outputId": "ae627419-4f5e-4c14-ead5-6a78404e57c7"
+        "outputId": "72ccf9d3-f4c9-4759-fcb1-0a337c4b34ed"
       },
-      "execution_count": 47,
+      "execution_count": 167,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -829,7 +831,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 167
         }
       ]
     },
@@ -843,19 +845,19 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-RYYRmJcuyjH",
-        "outputId": "2f14d2a4-4dc5-4e84-887e-5c96d0fc9fc2"
+        "outputId": "1f801c50-bb51-49f2-9163-b0bc62cb3ac3"
       },
-      "execution_count": 48,
+      "execution_count": 168,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "tensor([3, 4, 5, 6, 7, 8])"
+              "tensor([0, 1, 2, 3, 4, 5])"
             ]
           },
           "metadata": {},
-          "execution_count": 48
+          "execution_count": 168
         }
       ]
     },
@@ -867,7 +869,7 @@
       "metadata": {
         "id": "EcgtXeWSu0u_"
       },
-      "execution_count": 29,
+      "execution_count": 169,
       "outputs": []
     },
     {
@@ -879,52 +881,26 @@
       "metadata": {
         "id": "qAGy5Gy7vKp2"
       },
-      "execution_count": 30,
+      "execution_count": 170,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "test_set.tensors[1].shape[0]"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "VrijP0kmwY0o",
-        "outputId": "2f394467-cfb1-4aea-e7cd-8dd5d3d0f1a5"
-      },
-      "execution_count": 38,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "160"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 38
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "train_loader = DataLoader(train_set,batch_size=32,drop_last=True,shuffle=True)\n",
-        "test_loader = DataLoader(train_set,batch_size=test_set.tensors[1].shape[0])"
+        "test_loader = DataLoader(test_set,batch_size=test_set.tensors[1].shape[0])"
       ],
       "metadata": {
         "id": "adCy2O83vKnh"
       },
-      "execution_count": 39,
+      "execution_count": 171,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "for X, y in train_loader:\n",
-        "  print(X.shape,y.shape)\n",
+        "  print(X.shape,y)\n",
         "  break"
       ],
       "metadata": {
@@ -932,15 +908,16 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2KBQlp1pvKlC",
-        "outputId": "3a596678-3376-48c1-bf9f-590686754cd2"
+        "outputId": "2af03a06-1087-481a-d183-c9f5b47da856"
       },
-      "execution_count": 41,
+      "execution_count": 172,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([32, 11]) torch.Size([32])\n"
+            "torch.Size([32, 11]) tensor([3, 1, 3, 3, 4, 3, 4, 3, 4, 3, 3, 2, 2, 2, 4, 3, 1, 3, 1, 2, 3, 3, 2, 2,\n",
+            "        2, 2, 3, 3, 2, 2, 5, 2])\n"
           ]
         }
       ]
@@ -973,18 +950,14 @@
         "    x = F.relu(self.input(x))\n",
         "    x = F.relu(self.fc1(x))\n",
         "    x = F.relu(self.fc2(x))\n",
-        "    x = F.leaky_relu(self.output(x))\n",
+        "    x = self.output(x)\n",
         "\n",
-        "    return x\n",
-        "\n",
-        "net = ANNnet()\n",
-        "optimizer = torch.optim.SGD(params = net.parameters(), lr = 0.01, momentum=.9)\n",
-        "lossfun = nn.CrossEntropyLoss()"
+        "    return x\n"
       ],
       "metadata": {
         "id": "x-G99le1zd8b"
       },
-      "execution_count": 50,
+      "execution_count": 173,
       "outputs": []
     },
     {
@@ -1002,25 +975,107 @@
         "net = ANNnet()\n",
         "x = torch.randn((10,11))\n",
         "y = net(x)\n",
-        "print(y.shape)"
+        "print(torch.argmax(y,axis=1))"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "S-yan_zBvKUb",
-        "outputId": "46e38f7f-fc5a-410b-d7d0-e3e09a1ba775"
+        "outputId": "aaa6e909-cad8-4d4a-d642-f5f6e89f9e15"
       },
-      "execution_count": 52,
+      "execution_count": 174,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "torch.Size([10, 6])\n"
+            "tensor([1, 1, 1, 1, 1, 1, 1, 3, 3, 3])\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# train the model"
+      ],
+      "metadata": {
+        "id": "ChncnZ7A5yfW"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def trainANN():\n",
+        "\n",
+        "  trainacc = []\n",
+        "  testacc = []\n",
+        "  trainloss = []\n",
+        "  \n",
+        "  for i in range(epochs):\n",
+        "\n",
+        "    batchloss = []\n",
+        "    batchacc = []\n",
+        "\n",
+        "    net.train()\n",
+        "\n",
+        "    for X,y in train_loader:\n",
+        "      # print(y)\n",
+        "      yhat = net(X)\n",
+        "      # print(yhat)\n",
+        "      loss = lossfun(yhat,y)\n",
+        "      batchloss.append(loss.detach())\n",
+        "\n",
+        "      optimizer.zero_grad()\n",
+        "      loss.backward()\n",
+        "      optimizer.step()\n",
+        "\n",
+        "      batchacc.append(100* torch.mean( (torch.argmax(yhat,axis=1) == y).float() ).item())\n",
+        "\n",
+        "    trainacc.append(np.mean(batchacc))\n",
+        "\n",
+        "    net.eval()\n",
+        "    for X,y in test_loader:\n",
+        "      yhat = net(X)\n",
+        "      testacc.append(100* torch.mean( (torch.argmax(yhat,axis=1) == y).float() ))\n",
+        "\n",
+        "    trainloss.append(np.mean(batchloss))\n",
+        "\n",
+        "  return trainacc, testacc, trainloss \n"
+      ],
+      "metadata": {
+        "id": "DQxc8ESa50xc"
+      },
+      "execution_count": 175,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "epochs = 10\n",
+        "test_loader = DataLoader(test_set,batch_size=test_set.tensors[1].shape[0])\n",
+        "\n",
+        "net = ANNnet()\n",
+        "optimizer = torch.optim.SGD(params = net.parameters(), lr = 0.01, momentum=.9)\n",
+        "lossfun = nn.CrossEntropyLoss()\n",
+        "\n",
+        "trainloss = np.zeros((epochs,5))\n",
+        "trainacc = np.zeros((epochs,5)) \n",
+        "testacc = np.zeros((epochs,5)) \n",
+        "\n",
+        "for i , batchsize in enumerate(2**np.arange(1,10,2)):\n",
+        "\n",
+        "  train_loader = DataLoader(train_set,batch_size=int(batchsize),drop_last=True,shuffle=True)\n",
+        "  trainacc[:,i], testacc[:,i], trainloss[:,i]  = trainANN()\n",
+        "\n",
+        "  "
+      ],
+      "metadata": {
+        "id": "yfnaZX2tLaLO"
+      },
+      "execution_count": 176,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -1028,9 +1083,9 @@
         ""
       ],
       "metadata": {
-        "id": "NjOeHklZvKSD"
+        "id": "ON2Ao1c8S0Ff"
       },
-      "execution_count": null,
+      "execution_count": 177,
       "outputs": []
     }
   ]
