--- a/red_wine_quality_sugar_prediction.ipynb
+++ b/red_wine_quality_sugar_prediction.ipynb
@@ -1349,7 +1349,7 @@
       },
       "source": [
         "plt.figure(figsize=(10,10))\n",
-        "sns.heatmap(data_corr,annot=True, cmap = 'jet')"
+        "sns.heatmap(data_corr,annot=True)"
       ],
       "execution_count": null,
       "outputs": [
